<resources>
    <string name="app_name">Graduation</string>
    <string name="btn_staff_query">工作人员</string>
    <string name="btn_user_query">用户查询</string>
    <string name="tv_staff_mission_license">许可: %s</string>
    <string name="tv_staff_mission_code">代码: %s</string>
    <string name="tv_staff_mission_address">目的地\n %s</string>
    <string name="tv_user_order">订单号: %s</string>
    <string name="tv_user_receiver">收件人: %s</string>
    <string name="tv_user_order_distance">距离: %s</string>
    <string name="btn_staff_login">登录</string>
    <string name="tv_mission_gps">%s[%s]\n%s[%s]</string>
    <string name="tv_mission_region">%s</string>
    <string name="tv_mission_gps_date">%s</string>
    <string name="tv_mission_gps_time">%s</string>
    <string name="tv_order_trackId">%s</string>
    <string name="tv_order_address">%s</string>
    <string name="tv_order_receiver">%s</string>
    <string name="tv_order_date">%s</string>
    <string name="tv_order_time">%s</string>
</resources>
