<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp">

    <ImageView
        android:id="@+id/iv_order"
        android:src="@drawable/ic_user_order"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/tv_mission_license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/iv_order"
        android:layout_alignTop="@id/iv_order"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:textSize="20sp"
        android:text="@string/tv_order_trackId"/>

    <TextView
        android:id="@+id/tv_order_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/iv_order"
        android:layout_alignBottom="@id/iv_order"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:textSize="20sp"
        android:text="@string/tv_order_address"/>

    <TextView
        android:id="@+id/tv_mission_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/layout_time"
        android:layout_marginBottom="5dp"
        android:layout_alignBaseline="@id/tv_order_address"
        android:textSize="20sp"
        android:layout_marginEnd="5dp"
        android:text="@string/tv_order_receiver"/>

    <LinearLayout
        android:id="@+id/layout_time"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:gravity="center_vertical"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_order_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/tv_order_date"/>

        <TextView
            android:id="@+id/tv_order_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/tv_order_time"/>
    </LinearLayout>

</RelativeLayout>